--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
 	font-family: 'Noto Sans', sans-serif;
+	background-color: #caebf2;
 }
 h1, h2, h3, h4 {
 	font-family: 'Roboto Mono', monospace;
@@ -11,6 +12,9 @@ h1, h2, h3, h4 {
 	max-width: 840px;
 	margin: 0 auto;
 }
+.container > div{
+	margin: 20px auto;
+	}
 .intro{
 	text-align: center;
 }
@@ -39,7 +43,8 @@ h1, h2, h3, h4 {
 
 .project-image{
 	justify-self: center;
-	padding: 4%;
+	padding: 1%;
+	
 }
 .my-projects{
 	display: grid;
@@ -68,10 +73,7 @@ h1, h2, h3, h4 {
 	list-style: none;
 	padding: 0%;
 }
-.contact{
-	
-	padding-top: 7%;
-}
+
 
 @media (max-width: 480px){
 	.links-and-contact{
@@ -96,7 +98,7 @@ h1, h2, h3, h4 {
 	box-shadow: 0 8px 12px 0 rgba( 34, 60, 80, .16);
 }
 .project-image{
-	border-radius: 5px;
+	border-radius: 20px;
 	box-shadow:  0 4px 6px 0 rgba( 34, 60, 80, .16);
 	transition: all ease-in-out .2s;
 }
@@ -123,3 +125,19 @@ h1, h2, h3, h4 {
 	transition: all ease-in-out .2s;
 
 }
+form input, textarea{
+	padding: 5px;
+	border-radius: 5px;
+	width: 240px;
+}
+form{
+	width: 250px;
+	margin: 0 auto;
+}
+form input[type = "submit"]{
+width: 250px;	
+}
+.submit-button-wrapper{
+	margin: 20px 0px;
+}
+
